# ESP32S3-JC8048-Drill-Machine

./: CMakeLists.txt  README.md  gt911.c  gt911.h  lv_conf.h  lv_port.c  lv_port.h  main.c  safety.c  safety.h  servo42c.c  servo42c.h  st7262.c  st7262.h  ui_auto.c  ui_calibration.c  ui_common.h  ui_main.c  ui_manual.c
